<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.unilins.pic.Pedidos"
    android:textAlignment="textStart">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pedidos"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:entries="@array/array_Tipos"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:id="@+id/spn_Tipos"
        android:layout_marginTop="78dp"
        android:spinnerMode="dialog"
        android:gravity="start|center"
        android:background="#2d4f4d55"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/escolha_Tipo"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/escolha_Prato"
        android:id="@+id/textView3"
        android:layout_below="@+id/spn_Tipos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <Spinner
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:id="@+id/spn_Pratos"
        android:spinnerMode="dialog"
        android:gravity="start|center"
        android:background="#2d4f4d55"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/enviar_pedido"
        android:id="@+id/btn_EnviarPedido"
        android:layout_below="@+id/spn_Pratos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="86dp" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:id="@+id/btn_Cancelar"
        android:layout_alignBottom="@+id/btn_EnviarPedido"
        android:layout_alignRight="@+id/spn_Pratos"
        android:layout_alignEnd="@+id/spn_Pratos" />

</RelativeLayout>
