<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.unilins.pic.TelaDoCliente">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tela_cliente"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_RealizarPedido"
        android:src="@mipmap/realizar_pedido"
        android:layout_below="@+id/txt_NumeroMesa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mesa_00"
        android:id="@+id/txt_NumeroMesa"
        android:layout_marginTop="74dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total_gasto"
        android:id="@+id/txt_TotalGasto"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/txt_NumeroMesa"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_FecharPedido"
        android:layout_below="@+id/btn_RealizarPedido"
        android:layout_alignRight="@+id/btn_RealizarPedido"
        android:layout_alignEnd="@+id/btn_RealizarPedido"
        android:src="@mipmap/fechar_conta" />
</RelativeLayout>
